test/expected/explain_uf.out
explain unsigned float x
                 ^
18: error: "unsigned float" is illegal for built-in type
